feat: MET-598 apply new code for consumer